[package]
name = "asn1-editor"
version = "0.1.0"
edition = "2021"
description = "TUI ASN.1 (BER/DER) viewer and hex editor"
license = "Apache-2.0"

[lib]
name = "asn1_editor"
path = "src/lib.rs"

[[bin]]
name = "asn1-editor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
aws-lc-rs = "1"
openssl = "0.10"
openssl-sys = "0.9"
foreign-types = "0.3"
libc = "0.2"
botan = { version = "0.13.0", features = ["vendored"] }
